Bug 377232. Align font boundaries with cluster boundaries to avoid ATSUI weirdness where it chooses different fonts fo characters in the same cluster...